--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "uuid": "^9.0.0"
